Sun Dec 05 12:10:36 GMT 2010  Olly Betts <olly@survex.com>

	* backends/chert/chert_compact.cc: Add FIXME comment regarding
	  resolve_duplicate_metadata() getting called multiple times for the
	  same key in multipass mode.

Sun Dec 05 12:09:32 GMT 2010  Olly Betts <olly@survex.com>

	* include/xapian/compactor.h: Add documentation comments.

Sun Dec 05 04:54:03 GMT 2010  Olly Betts <olly@survex.com>

	* HACKING: Omega now wants libmagic-dev (though it's optional
	  currently).

Wed Nov 17 10:56:10 GMT 2010  Olly Betts <olly@survex.com>

	* examples/quest.cc: Add command line options to allow prefixes to
	  be specified for the QueryParser.

Tue Nov 09 23:18:36 GMT 2010  Olly Betts <olly@survex.com>

	* backends/brass/brass_compact.cc,backends/chert/chert_compact.cc,
	  backends/flint/flint_compact.cc: Fix access to empty priority_queue
	  while merging synonyms (found with _GLIBCXX_DEBUG).

Tue Nov 09 03:23:49 GMT 2010  Olly Betts <olly@survex.com>

	* HACKING: Drop list of platforms valgrind supports, as it takes
	  effort to keep up to date.  People can check valgrind.org for an
	  accurate list of currently supported platforms.

Sun Nov 07 14:13:44 GMT 2010  Olly Betts <olly@survex.com>

	* api/compactor.cc,backends/brass/brass_compact.cc,
	  backends/chert/chert_compact.cc,backends/flint/flint_compact.cc,
	  bin/xapian-compact.cc,include/xapian/compactor.h:
	  Compactor::resolve_duplicate_metadata() callback method is now passed
	  an array of std::string plus the array length, which allows for more
	  efficient merging that the series of pairwise merges which was
	  required before.

Mon Nov 01 14:47:37 GMT 2010  Richard Boulton <richard@tartarus.org>

	* matcher/multimatch.cc,matcher/multixorpostlist.cc,
	  matcher/multixorpostlist.h: Add debugging to print out the
	  postlist description after recalculation of maxweight, and to
	  MultiXorPostList methods.  Fix problem shown by soaktest where
	  the matcher was not told to recalculate the maxweight after a